cart item regular image fix scss

--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -51,7 +51,7 @@
         width: 200px;
         min-height: 288px;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
 
       .arrows {
